// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v37 public encryption: minimal v37 1`] = `
Object {
  "author": ProfileIdentifier {
    "network": "localhost",
    "userId": "$unknown",
  },
  "identifier": PostIVIdentifier {
    "network": "localhost",
    "postIV": "AAECAwQFBgcICQoLDA0ODw==",
  },
  "output": Uint8Array [ 9300c47597d0dbc0c0c0c0930092a74132353647434dd92b4a526872524b796b6d6e6d335362754e77364f6358465f6a69773067496c57335169574e5630316a656145c410000102030405060708090a0b0c0d0e0fc422422847d751786b14798828024dea879478f32c9aed87c5f427ae352faa7b50a13721c0 ],
  "postKey": CryptoKey { [opaque crypto key material] },
}
`;

exports[`v37 public encryption: minimal v37 decrypted 1`] = `
Array [
  Object {
    "type": "started",
  },
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v37 public encryption: minimal v37 parsed 1`] = `
Object {
  "author": Ok(None),
  "authorPublicKey": Ok(None),
  "encrypted": Ok(Uint8Array [ 422847d751786b14798828024dea879478f32c9aed87c5f427ae352faa7b50a13721 ]),
  "encryption": Ok(Object {
    "AESKey": Ok(Object {
      "algr": "A256GCM",
      "key": CryptoKey { [opaque crypto key material] },
    }),
    "iv": Ok(Uint8Array [ 000102030405060708090a0b0c0d0e0f ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -37,
}
`;

exports[`v37 public encryption: minimal v38 1`] = `
Object {
  "author": ProfileIdentifier {
    "network": "localhost",
    "userId": "$unknown",
  },
  "identifier": PostIVIdentifier {
    "network": "localhost",
    "postIV": "AAECAwQFBgcICQoLDA0ODw==",
  },
  "output": "🎼4/4|oEHPyYfuDpTZBp+oUpe8ChOpRJCf5CdAv8kD2NieQtbN+h4VkT+5oI44GNkCmNh6JfVmCV4V5Qtrc7IsU2tNDS9WZNWHfqjtvA14s1UHGi2Yschz9o3WwC+0tRiCfRcUAXunzP+volvqd8wNkfwqfMEou3capIT5kzQdw31RihId0xXWHjwUqzYu|AAECAwQFBgcICQoLDA0ODw==|uE2/uj+YtxNuiCBQW+q3jLZKHXRAQDxYmpia|_||1:||",
  "postKey": CryptoKey { [opaque crypto key material] },
}
`;

exports[`v37 public encryption: minimal v38 decrypted 1`] = `
Array [
  Object {
    "type": "started",
  },
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v37 public encryption: minimal v38 parsed 1`] = `
Object {
  "author": Ok(None),
  "authorPublicKey": Ok(None),
  "encrypted": Ok(Uint8Array [ b84dbfba3f98b7136e8820505beab78cb64a1d7440403c589a989a ]),
  "encryption": Ok(Object {
    "AESKey": Ok(Object {
      "algr": "A256GCM",
      "key": CryptoKey { [opaque crypto key material] },
    }),
    "iv": Ok(Uint8Array [ 000102030405060708090a0b0c0d0e0f ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -38,
}
`;
